<resources>
    <string name="app_name">Vanquish2</string>

    <!--Main-->
    <string name="typeofincident">TYPE OF INCIDENT</string>
    <string name="checkbox1">Collision</string>
    <string name="checkbox2">Non-Collision</string>
    <string name="nextmain">Next</string>
    <string name="previousmain">Previous</string>

    <!--Nocollision's name references-->
    <string name="noCollisionTitle">Non-Collision: Continued</string>
    <string name="checkbox12">Pothole</string>
    <string name="checkbox13">Road Obstacle</string>
    <string name="checkbox14">Animal</string>
    <string name="checkbox15">Suspicious Persons</string>
    <string name="nextno">Next</string>
    <string name="previousno">Previous</string>

    <!--no collision-->
    <string name="title_activity_no_collision">noCollision</string>
    <string name="casualty">TYPE OF CASUALTY</string>
    <string name="pass">Passenger Vehicle</string>
    <string name="motor">Motorcycle</string>
    <string name="bike">Cyclist</string>
    <string name="comm">Commercial Vehicle</string>
    <string name="Ped">Pedestrian</string>
    <string name="nextcasualty">Next</string>
    <string name="previouscasualty">Previous</string>

    <!--Thnx-->
    <string name="next1">Next</string>
    <string name="previous1">Previous</string>
    <string name="title_activity_thnx_bruh">activity_thnx</string>
    <string name="TY">THANK YOU</string>
    <string name="ty">Your contributions help save lives. We appreciate your support!</string>
    <string name="Miga"></string>

    <!-- Second -->
    <string name="nexttoform">Start Report Form</string>
    <string name="takephoto">Take Photo</string>
    <string name="title_activity_details">Details</string>
    <string name="details">Details</string>
    <string name="enter_any_details_you_would_like_to_go_with_the_report">Enter any details you would like to go with the report.</string>
    <string name="enter_details_here">Enter details here</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up_and_help_us_create_a_safer_community">Sign up and help us create a safer community!</string>
    <string name="start_the_report_by_taking_a_photo_and_then_starting_a_report_form">start the report by taking a photo and then starting a report form.</string>

</resources>
